<resources>
    <string name="app_name">Assignment Week 3 Lesson 5</string>

    <!-- Sign in Screen  -->
    <string name="sign_in_your_account">Sign into your Account</string>
    <string name="email_title_text">Email address(required)</string>
    <string name="password_title_text">Password(required)</string>
    <string name="forget_password_text_view_title">Forgot Password?</string>
    <string name="sign_in_button_title">Sign In</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="create_new_account">Create a new account</string>

    <!-- Register Screen  -->
    <string name="create_your_account">Create your account</string>
    <string name="required_field">required field</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>

    <!-- ForgetPassword Screen  -->
    <string name="send_password_to_your_email">Send password to your email</string>
    <string name="send">Send</string>

    <!-- Shopping Screen  -->
    <string name="electronic">Electronic</string>
    <string name="clothing">Clothing</string>
    <string name="beauty">Beauty</string>
    <string name="food">Food</string>
    <string name="shop_by_category">Shop by categories</string>
    <string name="welcome">Welcome</string>

</resources>