<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/sign_in_your_account"
        android:textColor="@color/black"
        android:textAlignment="center"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/email_title_text" />

                <EditText
                    android:id="@+id/sign_in_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:background="@drawable/edit_text_background"
                    android:inputType="textEmailAddress"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/password_title_text" />

                <EditText
                    android:id="@+id/sign_in_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:background="@drawable/edit_text_background" />

                <TextView
                    android:id="@+id/sign_in_forget_password_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:text="@string/forget_password_text_view_title"
                    android:textAlignment="textEnd"
                    android:autoLink="all"
                    android:textColor="#283593" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <Button
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/sign_in_button_title"
                    android:background="@drawable/sign_in_button_background"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textAllCaps="false"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#9E9E9E"
                            android:layout_centerVertical="true"/>
                    </RelativeLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/do_not_have_an_account"
                        android:textAlignment="center"/>
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#9E9E9E"
                            android:layout_centerVertical="true"/>
                    </RelativeLayout>
                </LinearLayout>
                <Button
                    android:id="@+id/sign_in_create_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/create_new_account"
                    android:background="@drawable/create_account_button_background"
                    android:textColor="#0071ce"
                    android:textStyle="bold"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>