<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterPageActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/send_password_to_your_email"
        android:textColor="@color/black"
        android:textAlignment="center"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/email_address" />

            <EditText
                android:id="@+id/forgot_password_email_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_background"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/forget_password_send_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:background="@drawable/sign_in_button_background"
                android:text="@string/send"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>